--- a/Final/unlogin-main-page.html
+++ b/Final/unlogin-main-page.html
@@ -5,8 +5,9 @@
 	<title>9487寶物交易網</title>
 	<link rel="stylesheet" type="text/css" href="css/final.css">
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-	<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 	<script type="text/javascript" src="js/slider.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	
 </head>
 <body>
 	<div class="lid">
