--- a/Final/unlogin-main-page.html
+++ b/Final/unlogin-main-page.html
@@ -5,6 +5,7 @@
 	<title>9487寶物交易網</title>
 	<link rel="stylesheet" type="text/css" href="css/final.css">
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="js/slider.js"></script>
 </head>
