--- a/Final/replyy.html
+++ b/Final/replyy.html
@@ -5,6 +5,7 @@
 	<title>9487寶物交易網</title>
 	<link rel="stylesheet" type="text/css" href="css/final.css">
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 	<script type="text/javascript" src="js/reply.js"></script>
